...
                config.labelText = "نستعلیق"
            } else if Locale.current.languageCode == "he" { // hebrew
                config.labelText = "עִבְרִית‎"
            } else if Locale.current.languageCode == "hi" { // Hindi
                config.labelText = "नागरि"
            } else {
                config.labelText = "Report Jank"
            }
            config.widgetAccessibilityLabel = "io.sentry.iOS-Swift.button.report-jank"
            config.layoutUIOffset = layoutOffset
        } else {
            config.autoInject = false
        }
...
        if args.contains("--io.sentry.feedback.no-widget-icon") {
            config.showIcon = false
        }
    }
    
    func configureFeedbackForm(config: SentryUserFeedbackFormConfiguration) {
        config.formTitle = "Jank Report"
        config.isEmailRequired = args.contains("--io.sentry.feedback.require-email")
        config.isNameRequired = args.contains("--io.sentry.feedback.require-name")
        config.submitButtonLabel = "Report that jank"
        config.addScreenshotButtonLabel = "Show us the jank"
        config.removeScreenshotButtonLabel = "Oof too nsfl"
        config.cancelButtonLabel = "What, me worry?"
        config.messagePlaceholder = "Describe the nature of the jank. Its essence, if you will."
        config.namePlaceholder = "Yo name"
        config.emailPlaceholder = "Yo email"
        config.messageLabel = "Thy complaint"
        config.emailLabel = "Thine email"
        config.nameLabel = "Thy name"
    }
    
    func configureFeedbackTheme(config: SentryUserFeedbackThemeConfiguration) {
        let fontFamily: String
        if Locale.current.languageCode == "ar" { // arabic; ar_EG
            fontFamily = "Damascus"
...
