...
                                                            </stackView>
                                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="mOm-Ca-55v">
                                                                <rect key="frame" x="0.0" y="504" width="196.66666666666666" height="38"/>
                                                                <subviews>
                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YhG-k9-4vd">
                                                                        <rect key="frame" x="0.0" y="0.0" width="99.666666666666671" height="38"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="io.sentry.ui-test.button.show-widget"/>
                                                                        <state key="normal" title="Button"/>
                                                                        <buttonConfiguration key="configuration" style="plain" title="Show Widget (Deprecated)">
                                                                            <fontDescription key="titleFontDescription" type="system" pointSize="10"/>
                                                                        </buttonConfiguration>
                                                                        <connections>
                                                                            <action selector="showFeedbackWidget:" destination="VqS-l1-kwe" eventType="touchUpInside" id="WZV-QO-AXD"/>
...
                                                                <connections>
                                                                    <segue destination="9PG-vw-mrg" kind="show" id="n2m-cz-6iQ"/>
                                                                </connections>
                                                            </button>
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fVb-GU-NNp">
                                                                <rect key="frame" x="0.0" y="360.66666666666663" width="196.33333333333334" height="28"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="io.sentry.ui-test.button.get-latest-envelope"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                                <state key="normal" title="Get latest envelope"/>
                                                                <connections>
                                                                    <action selector="getLatestEnvelope:" destination="VqS-l1-kwe" eventType="touchUpInside" id="6mG-Pd-VkT"/>
                                                                </connections>
...
                                            <action selector="disableFeedbackOnShake:" destination="fdb-vc-001" eventType="touchUpInside" id="fdb-act-shake-disable"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fdb-btn-screenshot-simulate">
                                        <rect key="frame" x="0.0" y="310.3333333333333" width="361" height="34.333333333333336"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Simulate Screenshot"/>
                                        <connections>
                                            <action selector="simulateScreenshot:" destination="fdb-vc-001" eventType="touchUpInside" id="fdb-act-screenshot-simulate"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
                        <constraints>
                            <constraint firstItem="fdb-stack-1" firstAttribute="centerY" secondItem="fdb-view-1" secondAttribute="centerY" id="fdb-center-y"/>
                            <constraint firstItem="fdb-stack-1" firstAttribute="leading" secondItem="fdb-safe-1" secondAttribute="leading" constant="16" id="fdb-leading"/>
                            <constraint firstItem="fdb-safe-1" firstAttribute="trailing" secondItem="fdb-stack-1" secondAttribute="trailing" constant="16" id="fdb-trailing"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Feedback" image="bubble.left.and.bubble.right" catalog="system" selectedImage="bubble.left.and.bubble.right.fill" id="fdb-tab-itm"/>
                    <connections>
                        <outlet property="toggleWidgetButton" destination="fdb-btn-toggle" id="fdb-out-toggle"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="fdb-first-r" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
            <objects>
                <viewController title="Scope Debug" id="ARr-dx-Xze" customClass="ScopeViewController" customModule="iOS_Swift" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="IXm-Dl-P82">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xb7-S3-3s7">
                                <rect key="frame" x="15.999999999999996" y="188" width="49.666666666666657" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Use name/value for string attributes or scope/span feature flags. Feature flag value accepts true/false." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="N
...
