...
    case .info:
        title = "OBTW"
    case .success:
        title = "Success!"
    case .warning:
        title = "Warning"
        action = .init(title: "OK", style: .default, handler: { _ in
            
        })
    case .error:
        title = "Error"
        action = .init(title: "OK", style: .default, handler: { _ in
            
        })
    }
    let alert = UIAlertController(title: title, message: message, preferredStyle: .actionSheet)
    if let action = action {
...
