// swiftlint:disable file_length

import SentrySampleShared
import XCTest

class UserFeedbackUITests: BaseUITest {
    override var automaticallyLaunchAndTerminateApp: Bool { false }
    
    let fm = FileManager.default
    
    /// The Application Support directory is different between this UITest runner app and the target app under test. We have to retrieve the target app's app support directory using UI elements and store it here for usage.
    /// - note: The SDK does not use application support for anything. We only use the app support directory for these tests to write marker files from the app indicating which feedback hooks have fired.
    var appSupportDirectory: String?
    
    override func setUp() {
        super.setUp()
        
        app.launchArguments.append(contentsOf: [
            SentrySDKOverrides.Feedback.noAnimations.rawValue,
            SentrySDKOverrides.Special.wipeDataOnLaunch.rawValue,
            
            // since the goal of these tests is only to exercise the UI of the widget and form, disable other SDK features to avoid any confounding factors that might fail or crash a test case
            SentrySDKOverrides.Special.disableEverything.rawValue,
            
            // write base64-encoded data into the envelope file for attachments instead of raw bytes, specifically for images. this way the entire envelope contents can be more easily passed as a string through the text field in the app to this process for validation.
            SentrySDKOverrides.Attachments.base64Data.rawValue
        ])
        continueAfterFailure = true
    }
}

extension UserFeedbackUITests {
    func testSimulateScreenshot_whenTapped_shouldPresentFeedbackWithScreenshot() {
        // -- Arrange --
        launchApp(env: [
            SentrySDKOverrides.Special.dsn.rawValue: "http://public@127.0.0.1:9/1"
        ], activateBeforeLaunch: false)
        defer { app.terminate() }
        app.buttons["More"].tap()
        app.tables.staticTexts["Feedback"].tap()
        let simulateScreenshotButton = app.buttons["Simulate Screenshot"]
        XCTAssertTrue(simulateScreenshotButton.waitForExistence(timeout: 5))

        // -- Act --
        simulateScreenshotButton.tap()

        // -- Assert --
        XCTAssertTrue(cancelButton.waitForExistence(timeout: 5))
        XCTAssertTrue(messageTextView.exists)
        XCTAssertTrue(removeScreenshotButton.exists)
    }

#if !SDK_V10
    private func launchAppWithDeprecatedWidget(args: [String] = [], env: [String: String] = [:]) {
        var launchArguments = args
        if !launchArguments.contains(SentrySDKOverrides.Feedback.disableAutoInject.rawValue) {
            launchArguments.append(SentrySDKOverrides.Feedback.disableAutoInject.rawValue)
        }
        launchApp(args: launchArguments, env: env)
        showDeprecatedWidget()
    }

    private func showDeprecatedWidget() {
        extrasAreaTabBarButton.tap()
        app.buttons["io.sentry.ui-test.button.show-widget"].tap()
        XCTAssertTrue(widgetButton.waitForExistence(timeout: 1))
    }

    // MARK: Tests ensuring correct appearance
    
    func testUIElementsWithDefaults() {
        launchAppWithDeprecatedWidget(args: [SentrySDKOverrides.Feedback.allDefaults.rawValue])
        // widget button text
        XCTAssertTrue(app.otherElements["Report a Bug"].exists)
        
        widgetButton.tap()
        
        // Form title
        XCTAssertTrue(app.staticTexts["Report a Bug"].exists)
        
        // form buttons
        XCTAssertTrue(app.staticTexts["Cancel"].exists)
        XCTAssertTrue(app.staticTexts["Send Bug Report"].exists)
                
        // Input field placeholders
        XCTAssertEqual(try XCTUnwrap(nameField.placeholderValue), "Your Name")
        XCTAssertEqual(try XCTUnwrap(emailField.placeholderValue), "your.email@example.org")
        XCTAssertTrue(app.staticTexts["What's the bug? What did you expect?"].exists)
        
        // Input field labels
        XCTAssertTrue(app.staticTexts["Email"].exists)
        XCTAssertTrue(app.staticTexts["Name"].exists)
        XCTAssertTrue(app.staticTexts["Description (Required)"].exists)
        XCTAssertFalse(app.staticTexts["Email (Required)"].exists)
        XCTAssertFalse(app.staticTexts["Name (Required)"].exists)
    }
    
    func testUIElementsWithCustomizations() {
        launchAppWithDeprecatedWidget()
        
        // widget button text
        XCTAssertTrue(app.otherElements["Report Jank"].exists)
        
        widgetButton.tap()
        
        // Form title
        XCTAssertTrue(app.staticTexts["Jank Report"].exists)
        
        // form buttons
        XCTAssertTrue(app.staticTexts["Report that jank"].exists)
        XCTAssertTrue(app.staticTexts["What, me worry?"].exists)
                
        // Input field placeholders
        XCTAssertEqual(try XCTUnwrap(nameField.placeholderValue), "Yo name")
        XCTAssertEqual(try XCTUnwrap(emailField.placeholderValue), "Yo email")
        XCTAssertTrue(app.staticTexts["Describe the nature of the jank. Its essence, if you will."].exists)
        
        // Input field labels
        XCTAssertTrue(app.staticTexts["Thine email"].exists)
        XCTAssertTrue(app.staticTexts["Thy name"].exists)
        XCTAssertTrue(app.staticTexts["Thy complaint (Required)"].exists)
        XCTAssertFalse(app.staticTexts["Thine email (Required)"].exists)
        XCTAssertFalse(app.staticTexts["Thy name (Required)"].exists)
    }
    
    func testPrefilledUserInformation() throws {
        launchAppWithDeprecatedWidget(args: [
            SentrySDKOverrides.Feedback.allDefaults.rawValue
        ], env: [
            SentrySDKOverrides.Scope.userFullName.rawValue: "ui test user",
            SentrySDKOverrides.Scope.userEmail.rawValue: "ui-testing@sentry.io"
        ])
        
        widgetButton.tap()
        XCTAssertEqual(try XCTUnwrap(nameField.value as? String), "ui test user")
        XCTAssertEqual(try XCTUnwrap(emailField.value as? String), "ui-testing@sentry.io")
    }
    
    func testNoPrefilledUserInformation() throws {
        launchAppWithDeprecatedWidget(args: [
            SentrySDKOverrides.Feedback.noUserInjection.rawValue
        ], env: [
            SentrySDKOverrides.Scope.userFullName.rawValue: "ui test user",
            SentrySDKOverrides.Scope.userEmail.rawValue: "ui-testing@sentry.io"
        ])
        
        widgetButton.tap()
        
        // XCUIElement.value returns the placeholder value when empty, which they should be here
        XCTAssertEqual(try XCTUnwrap(nameField.value as? String), "Yo name")
        XCTAssertEqual(try XCTUnwrap(emailField.value as? String), "Yo email")
    }
    
    // MARK: Tests validating happy path / successful submission

    func testSubmitFullyFilledCustomForm() throws {
        launchAppWithDeprecatedWidget(args: [
            SentrySDKOverrides.Feedback.noUserInjection.rawValue
        ])

        try retrieveAppUnderTestApplicationSupportDirectory()
        try assertHookMarkersNotExist()
        
        widgetButton.tap()
        XCTAssertTrue(nameField.waitForExistence(timeout: 1))
        try assertOnlyHookMarkersExist(names: [.onFormOpen])
        
        let testName = "Andrew"
        let testEmail = "custom@email.com"
        let testMessage = "UITest user feedback"

        fillInFields(testMessage, testName, testEmail)
        
        submit()

        try assertOnlyHookMarkersExist(names: [.onFormClose, .onSubmitSuccess])
        XCTAssertEqual(try dictionaryFromSuccessHookFile(), ["message": "UITest user feedback", "email": testEmail, "name": testName])
        
        // displaying the form again ensures the widget button still works afterwards; also assert that the fields are in their default state to ensure the entered data is not persisted between displays
        widgetButton.tap()
        
        // these will be prefilled by default
        XCTAssertEqual(try XCTUnwrap(nameField.value as? String), "Yo name")
        XCTAssertEqual(try XCTUnwrap(emailField.value as? String), "Yo email")
        
        XCTAssertEqual(try XCTUnwrap(messageTextView.value as? String), "", "The UITextView shouldn't have any initial text functioning as a placeholder; as UITextView has no placeholder property, the \"placeholder\" is a label on top of it.")
        
        cancelButton.tap()
        
        try assertEnvelopeContents(testMessage, testEmail, testName)
    }
    
    func testSubmitFullyFilledForm() throws {
        let testName = "Andrew"
        let testContactEmail = "andrew.mcknight@sentry.io"
        
        launchAppWithDeprecatedWidget(args: [SentrySDKOverrides.Feedback.allDefaults.rawValue], env: [
            SentrySDKOverrides.Scope.userFullName.rawValue: testName,
            SentrySDKOverrides.Scope.userEmail.rawValue: testContactEmail
        ])

        try retrieveAppUnderTestApplicationSupportDirectory()
        try assertHookMarkersNotExist()
        
        widgetButton.tap()
        XCTAssertTrue(nameField.waitForExistence(timeout: 1))
        try assertOnlyHookMarkersExist(names: [.onFormOpen])
        
        let testMessage = "UITest user feedback"
        fillInFields(testMessage)
        
        submit()
        
        try assertOnlyHookMarkersExist(names: [.onFormClose, .onSubmitSuccess])
        XCTAssertEqual(try dictionaryFromSuccessHookFile(), ["message": "UITest user feedback", "email": testContactEmail, "name": testName])
        
        // displaying the form again ensures the widget button still works afterwards; also assert that the fields are in their default state to ensure the entered data is not persisted between displays
        widgetButton.tap()
        
        // these will be prefilled by default
        XCTAssertEqual(try XCTUnwrap(nameField.value as? String), testName)
        XCTAssertEqual(try XCTUnwrap(emailField.value as? String), testContactEmail)
        
        XCTAssertEqual(try XCTUnwrap(messageTextView.value as? String), "", "The UITextView shouldn't have any initial text functioning as a placeholder; as UITextView has no placeholder property, the \"placeholder\" is a label on top of it.")
        
        cancelButton.tap()
        
        extrasAreaTabBarButton.tap()
        app.buttons["io.sentry.ui-test.button.get-latest-envelope"].tap()
        let marshaledDataBase64 = try XCTUnwrap(dataMarshalingField.value as? String)
        let data = try XCTUnwrap(Data(base64Encoded: marshaledDataBase64))
        let dict = try XCTUnwrap(JSONSerialization.jsonObject(with: data) as? [String: Any])
        XCTAssertEqual(try XCTUnwrap(dict["event_type"] as? String), "feedback")
        XCTAssertEqual(try XCTUnwrap(dict["message"] as? String), testMessage)
        XCTAssertEqual(try XCTUnwrap(dict["contact_email"] as? String), testContactEmail)
        XCTAssertEqual(try XCTUnwrap(dict["source"] as? String), "widget")
        XCTAssertEqual(try XCTUnwrap(dict["name"] as? String), testName)
        XCTAssertNotNil(dict["event_id"])
        XCTAssertEqual(try XCTUnwrap(dict["item_header_type"] as? String), "feedback")
    }

    func testSubmitCustomButton() throws {
        launchApp(args: [
            SentrySDKOverrides.Feedback.useCustomFeedbackButton.rawValue,
            SentrySDKOverrides.Feedback.noUserInjection.rawValue
        ])

        try retrieveAppUnderTestApplicationSupportDirectory()
        try assertHookMarkersNotExist()
        errorsAreaTabBarButton.tap()

        customButton.tap()
        XCTAssertTrue(nameField.waitForExistence(timeout: 1))
        try assertOnlyHookMarkersExist(names: [.onFormOpen])

        let testName = "Andrew"
        let testEmail = "custom@email.com"
        let testMessage = "UITest user feedback"

        fillInFields(testMessage, testName, testEmail)

        submit(usingCustomButton: true)

        try assertOnlyHookMarkersExist(names: [.onFormClose, .onSubmitSuccess])
        XCTAssertEqual(try dictionaryFromSuccessHookFile(), ["message": "UITest user feedback", "email": testEmail, "name": testName])

        try assertEnvelopeContents(testMessage, testEmail, testName)
    }

    func dictionaryFromSuccessHookFile() throws -> [String: String] {
        let actual = try getMarkerFileContents(type: .onSubmitSuccess)
        let data = try XCTUnwrap(Data(base64Encoded: actual))
        return try XCTUnwrap(JSONSerialization.jsonObject(with: data) as? [String: String])
    }
    
    func base64Representation(of dict: [String: Any]) throws -> String {
        let jsonData = try JSONSerialization.data(withJSONObject: dict, options: .sortedKeys)
        return jsonData.base64EncodedString()
    }
    
    func testSubmitWithOnlyRequiredFieldsFilled() throws {
        let testName = "Andrew"
        let testContactEmail = "andrew.mcknight@sentry.io"
        
        launchAppWithDeprecatedWidget(args: [SentrySDKOverrides.Feedback.allDefaults.rawValue], env: [
            SentrySDKOverrides.Scope.userFullName.rawValue: testName,
            SentrySDKOverrides.Scope.userEmail.rawValue: testContactEmail
        ])

        try retrieveAppUnderTestApplicationSupportDirectory()
        try assertHookMarkersNotExist()
        
        widgetButton.tap()
        XCTAssertTrue(sendButton.waitForExistence(timeout: 1))
        try assertOnlyHookMarkersExist(names: [.onFormOpen])
        
        messageTextView.tap()
        messageTextView.typeText("UITest user feedback")
        
        submit()
        
        try assertOnlyHookMarkersExist(names: [.onFormClose, .onSubmitSuccess])
        XCTAssertEqual(try dictionaryFromSuccessHookFile(), ["name": testName, "message": "UITest user feedback", "email": testContactEmail])
        
        XCTAssertTrue(widgetButton.waitForExistence(timeout: 1))
    }
    
    // MARK: Tests validating cancellation functions correctly
    
    func testCancelFromFormByButton() throws {
        let testName = "Andrew"
        let testContactEmail = "andrew.mcknight@sentry.io"
        
        launchAppWithDeprecatedWidget(args: [SentrySDKOverrides.Feedback.allDefaults.rawValue], env: [
            SentrySDKOverrides.Scope.userFullName.rawValue: testName,
            SentrySDKOverrides.Scope.userEmail.rawValue: testContactEmail
        ])

        try retrieveAppUnderTestApplicationSupportDirectory()
        try assertHookMarkersNotExist()
        
        widgetButton.tap()
        XCTAssertTrue(sendButton.waitForExistence(timeout: 1))
        try assertOnlyHookMarkersExist(names: [.onFormOpen])
        
        messageTextView.tap()
        messageTextView.typeText("UITest user feedback")
        
        let cancelButton: XCUIElement = app.staticTexts["Cancel"]
        cancelButton.tap()
        
        try assertOnlyHookMarkersExist(names: [.onFormClose])
        
        // displaying the form again ensures the widget button still works afterwards; also assert that the fields are in their default state to ensure the entered data is not persisted between displays
        XCTAssertTrue(widgetButton.waitForExistence(timeout: 1))
        widgetButton.tap()
        
        XCTAssertEqual(try XCTUnwrap(nameField.value as? String), testName)
        XCTAssertEqual(try XCTUnwrap(emailField.value as? String), testContactEmail)
        
        XCTAssertEqual(try XCTUnwrap(messageTextView.value as? String), "", "The UITextView shouldn't have any initial text functioning as a placeholder; as UITextView has no placeholder property, the \"placeholder\" is a label on top of it.")
    }
    
    func testCancelFromFormBySwipeDown() throws {
        if UIDevice.current.userInterfaceIdiom == .pad {
            throw XCTSkip("Swipe down to cancel not applicable on iPad")
        }
        
        let testName = "Andrew"
        let testContactEmail = "andrew.mcknight@sentry.io"
        
        launchAppWithDeprecatedWidget(args: [SentrySDKOverrides.Feedback.allDefaults.rawValue], env: [
            SentrySDKOverrides.Scope.userFullName.rawValue: testName,
            SentrySDKOverrides.Scope.userEmail.rawValue: testContactEmail
        ])

        try retrieveAppUnderTestApplicationSupportDirectory()
        try assertHookMarkersNotExist()
        
        widgetButton.tap()
        XCTAssertTrue(sendButton.waitForExistence(timeout: 1))
        try assertOnlyHookMarkersExist(names: [.onFormOpen])

        // the modal cancel gesture
        app.swipeDown(velocity: .fast)
        
        // the swipe dismiss animation takes an extra moment, so we need to wait for the widget to be visible again
        XCTAssertTrue(widgetButton.waitForExistence(timeout: 1))
        
        try assertOnlyHookMarkersExist(names: [.onFormClose])
        
        // displaying the form again ensures the widget button still works afterwards; also assert that the fields are in their default state to ensure the entered data is not persisted between displays
        widgetButton.tap()
        
        XCTAssertEqual(try XCTUnwrap(nameField.value as? String), testName)
        XCTAssertEqual(try XCTUnwrap(emailField.value as? String), testContactEmail)

        XCTAssertEqual(try XCTUnwrap(messageTextView.value as? String), "", "The UITextView shouldn't have any initial text functioning as a placeholder; as UITextView has no placeholder property, the \"placeholder\" is a label on top of it.")
    }
    
#endif // !SDK_V10

    // MARK: Tests validating screenshot functionality
    
    func testAddingScreenshots() throws {
        launchApp(args: [
            SentrySDKOverrides.Feedback.injectScreenshot.rawValue
        ])
        XCTAssertTrue(removeScreenshotButton.isHittable)
        
        let testMessage = "UITest user feedback"
        fillInFields(testMessage)
        
        submit(waitingForWidget: false)
        
        try assertEnvelopeContents(testMessage, attachments: true)
    }
    
    func testAddingAndRemovingScreenshots() throws {
        launchApp(args: [
            SentrySDKOverrides.Feedback.injectScreenshot.rawValue
        ])
        XCTAssertTrue(removeScreenshotButton.isHittable)
        removeScreenshotButton.tap()
        XCTAssertFalse(removeScreenshotButton.isHittable)
        
        let testMessage = "UITest user feedback"
        fillInFields(testMessage)
        
        submit(waitingForWidget: false)
        
        try assertEnvelopeContents(testMessage)
    }
    
#if !SDK_V10
    // MARK: Tests validating error cases
    
    func testSubmitWithNoFieldsFilledDefault() throws {
        launchAppWithDeprecatedWidget(args: [SentrySDKOverrides.Feedback.allDefaults.rawValue])

        try retrieveAppUnderTestApplicationSupportDirectory()
        try assertHookMarkersNotExist()
        
        widgetButton.tap()
        
        submit(expectingError: true)
        
        XCTAssertTrue(app.staticTexts["Error"].exists)
        XCTAssertTrue(app.staticTexts["You must provide all required information before submitting. Please check the following field: description."].exists)
        
        app.buttons["OK"].tap()
        
        try assertOnlyHookMarkersExist(names: [.onFormOpen, .onSubmitError])
        
        XCTAssertEqual(try getMarkerFileContents(type: .onSubmitError), "io.sentry.error;1;The user did not complete the feedback form.;description")
    }
    
    func testSubmitWithNoFieldsFilledEmailAndMessageRequired() throws {
        launchAppWithDeprecatedWidget(args: [
            SentrySDKOverrides.Feedback.requireEmail.rawValue,
            SentrySDKOverrides.Feedback.noUserInjection.rawValue
        ])

        try retrieveAppUnderTestApplicationSupportDirectory()
        try assertHookMarkersNotExist()
        
        widgetButton.tap()
        
        XCTAssertTrue(app.staticTexts["Thine email (Required)"].exists)
        XCTAssertTrue(app.staticTexts["Thy name"].exists)
        XCTAssertFalse(app.staticTexts["Thy name (Required)"].exists)
        XCTAssertTrue(app.staticTexts["Thy complaint (Required)"].exists)
        
        submit(expectingError: true)
        
        XCTAssertTrue(app.staticTexts["Error"].exists)
        XCTAssertTrue(app.staticTexts["You got many errors in this form: thine email and thy complaint."].exists)
        
        app.buttons["OK"].tap()
        
        try assertOnlyHookMarkersExist(names: [.onFormOpen, .onSubmitError])
        XCTAssertEqual(try getMarkerFileContents(type: .onSubmitError), "io.sentry.error;1;The user did not complete the feedback form.;thine email;thy complaint")
    }
    
    func testSubmitWithNoFieldsFilledAllRequired() throws {
        launchAppWithDeprecatedWidget(args: [
            SentrySDKOverrides.Feedback.requireEmail.rawValue,
            SentrySDKOverrides.Feedback.requireName.rawValue,
            SentrySDKOverrides.Feedback.noUserInjection.rawValue
        ])

        try retrieveAppUnderTestApplicationSupportDirectory()
        try assertHookMarkersNotExist()
        
        widgetButton.tap()
        
        XCTAssertTrue(app.staticTexts["Thine email (Required)"].exists)
        XCTAssertTrue(app.staticTexts["Thy name (Required)"].exists)
        XCTAssertTrue(app.staticTexts["Thy complaint (Required)"].exists)
        
        submit(expectingError: true)
        
        XCTAssertTrue(app.staticTexts["Error"].exists)
        XCTAssertTrue(app.staticTexts.element(matching: NSPredicate(format: "label LIKE 'You got many errors in this form: thy name, thine email and thy complaint.'")).exists)
        
        app.buttons["OK"].tap()
        
        try assertOnlyHookMarkersExist(names: [.onFormOpen, .onSubmitError])
        XCTAssertEqual(try getMarkerFileContents(type: .onSubmitError), "io.sentry.error;1;The user did not complete the feedback form.;thine email;thy complaint;thy name")
    }
    
    func testSubmitOnlyWithOptionalFieldsFilled() throws {
        launchAppWithDeprecatedWidget(args: [SentrySDKOverrides.Feedback.allDefaults.rawValue])

        try retrieveAppUnderTestApplicationSupportDirectory()
        try assertHookMarkersNotExist()
        
        widgetButton.tap()
        
        submit(expectingError: true)
        
        XCTAssertTrue(app.staticTexts["Error"].exists)
        XCTAssertTrue(app.staticTexts["You must provide all required information before submitting. Please check the following field: description."].exists)
        
        app.buttons["OK"].tap()
        
        try assertOnlyHookMarkersExist(names: [.onFormOpen, .onSubmitError])
        XCTAssertEqual(try getMarkerFileContents(type: .onSubmitError), "io.sentry.error;1;The user did not complete the feedback form.;description")
    }
    
    func testSubmissionErrorThenSuccessAfterFixingIssues() throws {
        let testName = "Andrew"
        let testContactEmail = "andrew.mcknight@sentry.io"
        
        launchAppWithDeprecatedWidget(args: [SentrySDKOverrides.Feedback.allDefaults.rawValue], env: [
            SentrySDKOverrides.Scope.userFullName.rawValue: testName,
            SentrySDKOverrides.Scope.userEmail.rawValue: testContactEmail
        ])
        
        try retrieveAppUnderTestApplicationSupportDirectory()
        try assertHookMarkersNotExist()
        
        widgetButton.tap()
        
        submit(expectingError: true)
        
        XCTAssertTrue(app.staticTexts["Error"].exists)
        app.buttons["OK"].tap()
        
        try assertOnlyHookMarkersExist(names: [.onFormOpen, .onSubmitError])
        XCTAssertEqual(try getMarkerFileContents(type: .onSubmitError), "io.sentry.error;1;The user did not complete the feedback form.;description")
        
        messageTextView.tap()
        messageTextView.typeText("UITest user feedback")
        
        submit()
        
        try assertOnlyHookMarkersExist(names: [.onFormClose, .onSubmitSuccess])
        XCTAssertEqual(try dictionaryFromSuccessHookFile(), ["name": testName, "message": "UITest user feedback", "email": testContactEmail])
    }

    // MARK: Alternative widget control

